fix button spacing

--- a/mathesar_ui/src/component-library/button/Button.scss
+++ b/mathesar_ui/src/component-library/button/Button.scss
@@ -11,7 +11,6 @@
   font-weight: inherit;
   position: relative;
   padding: 0.5em 0.5em;
-  gap: 0.25em;
   transition: background-color 0.2s ease-in-out;
 
   > * + * {
